# KoggerApp

./: #_deploy_linux_x64_release.sh  #_deploy_win_x64_release.bat  #_release_translations.bat  #_update_translations.bat  .clang-format  .clang-tidy  .clangd  .gitignore  3Plot.cpp  3Plot.h  3Plot_BACKUP_1338.cpp  3Plot_BASE_1338.cpp  3Plot_REMOTE_1338.cpp  AdjBox.qml  CMakeLists.txt  CONTRIBUTING.md  CProgress.qml  CProgressButton.qml  CRButton.qml  ChartBox.qml  ComboBackStyle.qml  ConnectionViewer.qml  Console.qml  ConverterXTF.h  DSP.h  DatasetBox.qml  DatasetCheckBox.qml  DevDriver.cpp  DevDriver.h  DevHub.cpp  DevHub.h  DevQProperty.h  DeviceManager.cpp  DeviceManager.h  DeviceManagerWrapper.cpp  DeviceManagerWrapper.h  DeviceSettingsViewer.qml  DistBox.qml  EchogramProcessing.h  FileReader.cpp  (+122 more)
qml/app/: ActionChip.qml  AimPanelSettingsTab.qml  AppSettingsPage.qml  AutopilotPopup.qml  BasePanePopup.qml  BottomTrackEditPopup.qml  CMakeLists.txt  CircleIconButton.qml  ConnectionsSettingsPage.qml  ConsolePanelDrawer.qml  CsvExportSettingsTab.qml  DeviceSettingsPage.qml  DisclosureIndicator.qml  EchogramSettingsPanel.qml  EchogramSettingsTab.qml  ExtraInfoPopup.qml  ExtraInfoSettingsTab.qml  FavoriteLayoutCard.qml  FileOpeningOverlay.qml  FilesSettingsPage.qml  FullscreenPanePopup.qml  GlobalPanePopup.qml  HotActionsPanel.qml  InputDeviceState.qml  KSpinBox.qml  LayoutRules.js  LayoutSnapshotPreview.qml  MainWindow.qml  ModeSettingsPanel.qml  NavButton.qml  NotificationsOverlay.qml  Pane2DSettingsPage.qml  Pane2DWindow.qml  Pane3DSettingsPage.qml  Pane3DWindow.qml  PaneContentLoader.qml  PaneEditorChrome.qml  PaneFrame.qml  PaneInputBridge.qml  ParamCard.qml  (+13 more)
qml/controls/: AdjBoxBack.qml  CCombo.qml  CComboBox.qml  CMakeLists.txt  CMouseOpacityArea.qml  CPopup.qml  CRButton.qml  CRadioDel.qml  CSlider.qml  CText.qml  CTextField.qml  CheckButton.qml  ConnectionButton.qml  CustomGroupBox.qml  MouseOpacityArea.qml  SpinBoxCustom.qml  TabBackStyle.qml  qmldir
qml/devices/: CMakeLists.txt  ConnectionViewer.qml  DatasetBox.qml  DatasetCheckBox.qml  DevAddrBox.qml  DevSettingsBox.qml  DeviceItem.qml  DeviceSettingsViewer.qml  DopplerBox.qml  ExportDist.qml  ExportSettings.qml  FactoryBox.qml  FilesViewer.qml  FlashBox.qml  RecorderBox.qml  ServoBox.qml  SonarBox.qml  USBLBox.qml  UpgradeBox.qml  qmldir
qml/kqml_types/: Anim.qml  AppPalette.qml  CMakeLists.txt  IdleFade.qml  KButton.qml  KCheckBox.qml  KCircleIconButton.qml  KCloseBadge.qml  KCombo.qml  KDragBar.qml  KFocusRing.qml  KParamGrid.qml  KSlider.qml  KSpinBox.qml  KSwitch.qml  KTabBar.qml  KTapArea.qml  KToggleRow.qml  KToolTip.qml  Tokens.qml  ZOrder.qml  qmldir
qml/menus/: CMakeLists.txt  Console.qml  DatasetBoxForm.ui.qml  MainMenuBar.qml  MenuBlock.qml  MenuButton.qml  MenuFrame.qml  MenuRow.qml  MenuScroll.qml  MenuViewer.qml  ParamGroup.qml  ParamSetup.qml  TitleMeasurement.qml  TitleMenuBox.qml  TitleSetup.qml  qmldir
qml/scene2d/: CMakeLists.txt  ChartBox.qml  ChartLevel.qml  ChartLevelSingle.qml  EchogramContactPopup.qml  KChartLevelCapsule.qml  KThemeSwitcher.qml  Plot2D.qml  qmldir
src/scene3d/: CMakeLists.txt  scene3d.pri  scene3d_renderer.cpp  scene3d_renderer.h  scene3d_view.cpp  scene3d_view.h
src/scene3d/controllers/: CMakeLists.txt  boat_track_control_menu_controller.cpp  boat_track_control_menu_controller.h  boattrackcontrolmenucontroller.cpp  bottom_track_control_menu_controller.cpp  bottom_track_control_menu_controller.h  bottomtrackcontrolmenucontroller.cpp  controllers.pri  geojson_controller.cpp  geojson_controller.h  geojson_tree_model.cpp  geojson_tree_model.h  image_view_control_menu_controller.cpp  image_view_control_menu_controller.h  isobaths_control_menu_controller.cpp  isobaths_control_menu_controller.h  isobaths_view_control_menu_controller.cpp  isobaths_view_control_menu_controller.h  map_view_control_menu_controller.cpp  map_view_control_menu_controller.h  mosaic_view_control_menu_controller.cpp  mosaic_view_control_menu_controller.h  mpc_filter_control_menu_controller.cpp  mpc_filter_control_menu_controller.h  mpcfiltercontrolmenucontroller.cpp  navigation_arrow_control_menu_controller.cpp  navigation_arrow_control_menu_controller.h  npd_filter_control_menu_controller.cpp  npd_filter_control_menu_controller.h  npdfiltercontrolmenucontroller.cpp  point_group_control_menu_controller.cpp  point_group_control_menu_controller.h  pointgroupcontrolmenucontroller.cpp  polygon_group_control_menu_controller.cpp  polygon_group_control_menu_controller.h  polygongroupcontrolmenucontroller.cpp  qml_component_controller.cpp  qml_component_controller.h  scene3d_control_menu_controller.cpp  scene3d_control_menu_controller.h  (+13 more)
src/scene3d/core/: CMakeLists.txt  core.pri  draw_utils.h  qml_object_names.h  scene_object.cpp  scene_object.h  sceneobject.h
src/scene3d/domain/: CMakeLists.txt  DelaunayTriangulation.h  barycentric_interpolator.h  boat_track.cpp  boat_track.h  boattrack.cpp  bottom_track.cpp  bottom_track.h  bottomtrack.cpp  boundary_detector.h  boundarydetector.h  circle.h  contacts.cpp  contacts.h  contour.h  coordinate_axes.cpp  coordinate_axes.h  cube.cpp  cube.h  delaunay_triangulation.h  domain.pri  edge.h  equals.h  geojson_layer.cpp  geojson_layer.h  grid_generator.h  gridgenerator.h  image_view.cpp  image_view.h  isobaths.cpp  isobaths.h  isobaths_view.cpp  isobaths_view.h  map_view.cpp  map_view.h  mosaic_mesh.cpp  mosaic_mesh.h  mosaic_tile.cpp  mosaic_tile.h  mosaic_view.cpp  (+31 more)
src/scene3d/events/: CMakeLists.txt  epoch_event.cpp  epoch_event.h  events.pri
src/scene3d/processors/: isobaths_processor.cpp  isobaths_processor.h  processors.pri  surface_processor.cpp  surface_processor.h  surface_view_processor.cpp  surface_view_processor.h  surfaceprocessor.h  tinbasicsurfaceprocessor.hpp
src/scene3d/utils/: CMakeLists.txt  abstract_entity_data_filter.h  draw_utils.cpp  draw_utils.h  geojson_defs.h  geojson_feature_model.cpp  geojson_feature_model.h  geojson_io.cpp  geojson_io.h  geojson_style.cpp  geojson_style.h  max_points_filter.cpp  max_points_filter.h  ray.cpp  ray.h  (+7 more)
(+2096 files in other folders)
