add_library(kogger_app STATIC)
qt_add_qml_module(kogger_app
    URI app VERSION 1.0 RESOURCE_PREFIX /qml
    QML_FILES
        ActionChip.qml
        AppSettingsPage.qml
        AutopilotPopup.qml
        BasePanePopup.qml
        BottomTrackEditPopup.qml
        AimPanelSettingsTab.qml
        ConnectionsSettingsPage.qml
        ConsolePanelDrawer.qml
        CsvExportSettingsTab.qml
        DeviceSettingsPage.qml
        DisclosureIndicator.qml
        EchogramSettingsPanel.qml
        EchogramSettingsTab.qml
        ExtraInfoPopup.qml
        ExtraInfoSettingsTab.qml
        FavoriteLayoutCard.qml
        FileOpeningOverlay.qml
        FilesSettingsPage.qml
        FullscreenPanePopup.qml
        GlobalPanePopup.qml
        HotActionsPanel.qml
        InputDeviceState.qml
        LayoutSnapshotPreview.qml
        MainWindow.qml
        ModeSettingsPanel.qml
        NavButton.qml
        NotificationsOverlay.qml
        Pane2DSettingsPage.qml
        Pane2DWindow.qml
        Pane3DSettingsPage.qml
        Pane3DWindow.qml
        PaneContentLoader.qml
        PaneEditorChrome.qml
        PaneFrame.qml
        PaneInputBridge.qml
        ParamCard.qml
        ParamCardGroup.qml
        ProfilesPopup.qml
        QuickActionSettingsTab.qml
        SecondaryWindow.qml
        SettingsGearButton.qml
        SettingsGroup.qml
        SettingsSidebarBase.qml
        SplashOverlay.qml
        TgcSettingsTab.qml
        UiSavingSettingsTab.qml
        WorkspaceStore.qml
        WorkspaceView.qml
        LayoutResize.js
        LayoutRules.js
        LayoutTree.js)
